@@ -17,6 +17,13 @@
 
 package infra.building.nullability;
 
+import net.ltgt.gradle.errorprone.CheckSeverity;
+import net.ltgt.gradle.errorprone.ErrorProneOptions;
+
+import org.gradle.api.provider.Property;
+import org.gradle.api.provider.Provider;
+import org.gradle.api.tasks.compile.JavaCompile;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedHashMap;
@@ -26,87 +33,84 @@ import java.util.Map;
 
 import javax.inject.Inject;
 
-import net.ltgt.gradle.errorprone.CheckSeverity;
-import net.ltgt.gradle.errorprone.ErrorProneOptions;
-import org.gradle.api.provider.Property;
-import org.gradle.api.provider.Provider;
-import org.gradle.api.tasks.compile.JavaCompile;
-
 /**
  * Nullability configuration options for a {@link JavaCompile} task.
  *
  * @author Andy Wilkinson
+ * @author <a href="https://github.com/TAKETODAY">海子 Yang</a>
  */
 public abstract class NullabilityOptions {
 
-	/**
-	 * Internal use only.
-	 * @param errorProne the ErrorProne options to which the nullability options are
-	 * applied
-	 */
-	@Inject
-	public NullabilityOptions(ErrorProneOptions errorProne) {
-		Provider<Checking> checkingAsEnum = getChecking()
-			.map((string) -> Checking.valueOf(string.toUpperCase(Locale.ROOT)));
-		errorProne.getEnabled().set(checkingAsEnum.map((checking) -> checking != Checking.DISABLED));
-		errorProne.getDisableAllChecks().set(checkingAsEnum.map((checking) -> checking != Checking.DISABLED));
-		errorProne.getCheckOptions().putAll(checkingAsEnum.map(this::checkOptions));
-		errorProne.getChecks().putAll(checkingAsEnum.map(this::checks));
-	}
+  /**
+   * Internal use only.
+   *
+   * @param errorProne the ErrorProne options to which the nullability options are
+   * applied
+   */
+  @Inject
+  public NullabilityOptions(ErrorProneOptions errorProne) {
+    Provider<Checking> checkingAsEnum = getChecking()
+            .map((string) -> Checking.valueOf(string.toUpperCase(Locale.ROOT)));
+    errorProne.getEnabled().set(checkingAsEnum.map((checking) -> checking != Checking.DISABLED));
+    errorProne.getDisableAllChecks().set(checkingAsEnum.map((checking) -> checking != Checking.DISABLED));
+    errorProne.getCheckOptions().putAll(checkingAsEnum.map(this::checkOptions));
+    errorProne.getChecks().putAll(checkingAsEnum.map(this::checks));
+  }
 
-	private Map<String, String> checkOptions(Checking checking) {
-		if (checking == Checking.DISABLED) {
-			return Collections.emptyMap();
-		}
-		Map<String, String> options = new LinkedHashMap<>();
-		options.put("NullAway:OnlyNullMarked", "true");
-		List<String> customContractAnnotations = new ArrayList<>();
-		customContractAnnotations.add("infra.lang.Contract");
-		if (checking == Checking.TESTS) {
-			customContractAnnotations.add("org.assertj.core.internal.annotation.Contract");
-		}
-		options.put("NullAway:CustomContractAnnotations", String.join(",", customContractAnnotations));
-		options.put("NullAway:JSpecifyMode", "true");
-		options.put("NullAway:UnannotatedSubPackages", "infra.bytecode,infra.app.loader,infra.mock.web,infra.test,infra.app.test");
-		if (checking == Checking.TESTS) {
-			options.put("NullAway:HandleTestAssertionLibraries", "true");
-		}
-		return options;
-	}
+  private Map<String, String> checkOptions(Checking checking) {
+    if (checking == Checking.DISABLED) {
+      return Collections.emptyMap();
+    }
+    Map<String, String> options = new LinkedHashMap<>();
+    options.put("NullAway:OnlyNullMarked", "true");
+    List<String> customContractAnnotations = new ArrayList<>();
+    customContractAnnotations.add("infra.lang.Contract");
+    if (checking == Checking.TESTS) {
+      customContractAnnotations.add("org.assertj.core.internal.annotation.Contract");
+    }
+    options.put("NullAway:CustomContractAnnotations", String.join(",", customContractAnnotations));
+    options.put("NullAway:JSpecifyMode", "true");
+    options.put("NullAway:UnannotatedSubPackages", "infra.bytecode,infra.app.loader,infra.mock.web,infra.test,infra.app.test");
+    if (checking == Checking.TESTS) {
+      options.put("NullAway:HandleTestAssertionLibraries", "true");
+    }
+    return options;
+  }
 
-	private Map<String, CheckSeverity> checks(Checking checking) {
-		if (checking != Checking.DISABLED) {
-			return Map.of("NullAway", CheckSeverity.ERROR);
-		}
-		return Collections.emptyMap();
-	}
+  private Map<String, CheckSeverity> checks(Checking checking) {
+    if (checking != Checking.DISABLED) {
+      return Map.of("NullAway", CheckSeverity.WARN);
+    }
+    return Collections.emptyMap();
+  }
 
-	/**
-	 * Returns the type of checking to perform.
-	 * @return the type of checking
-	 */
-	public abstract Property<String> getChecking();
+  /**
+   * Returns the type of checking to perform.
+   *
+   * @return the type of checking
+   */
+  public abstract Property<String> getChecking();
 
-	/**
-	 * The type of null checking to perform for the {@link JavaCompile} task.
-	 */
-	enum Checking {
+  /**
+   * The type of null checking to perform for the {@link JavaCompile} task.
+   */
+  enum Checking {
 
-		/**
-		 * Main code nullability checking is performed.
-		 */
-		MAIN,
+    /**
+     * Main code nullability checking is performed.
+     */
+    MAIN,
 
-		/**
-		 * Test code nullability checking is performed.
-		 */
-		TESTS,
+    /**
+     * Test code nullability checking is performed.
+     */
+    TESTS,
 
-		/**
-		 * Nullability checking is disabled.
-		 */
-		DISABLED
+    /**
+     * Nullability checking is disabled.
+     */
+    DISABLED
 
-	}
+  }
 
 }
